# wt-bh-village-games

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pixi.toml
.github/workflows/: link_issue.yml  publish.yml  test.yml
data/: bahari_hai_village_games_report_template.docx  patrol_findings_with_village.csv
data/marine_layers/: Patrol_areas_(2km_buffer__from_sectors).dbf  Patrol_areas_(2km_buffer__from_sectors).sbn  Patrol_areas_(2km_buffer__from_sectors).sbx  Patrol_areas_(2km_buffer__from_sectors).shp  Patrol_areas_(2km_buffer__from_sectors).shp.xml  Patrol_areas_(2km_buffer__from_sectors).shx  anti_poaching_sectors.dbf  anti_poaching_sectors.sbn  anti_poaching_sectors.sbx  anti_poaching_sectors.shp  anti_poaching_sectors.shp.xml  anti_poaching_sectors.shx  fishing_grounds.dbf  fishing_grounds.sbn  fishing_grounds.sbx  fishing_grounds.shp  fishing_grounds.shp.xml  fishing_grounds.shx  patrol_areas_input_debug.geojson  patrol_sectors.dbf  patrol_sectors.sbn  patrol_sectors.sbx  patrol_sectors.shp  patrol_sectors.shp.xml  patrol_sectors.shx  seagrasses_kenya_2018.geojson  villages.dbf  villages.sbn  villages.sbx  villages.shp  villages.shp.xml  villages.shx  watamu_sublocations.dbf  watamu_sublocations.sbn  watamu_sublocations.sbx  watamu_sublocations.shp  watamu_sublocations.shx  watamu_sublocations_input_debug.geojson
dev/: pytest-cli.sh  pytest-task.sh  recompile.sh
publish/: build.sh  push.sh
publish/recipes/release/: ecoscope-workflows-ext-bh-village-games.yaml
src/ecoscope-workflows-ext-bh-village-games/: README.md  pyproject.toml
src/ecoscope-workflows-ext-bh-village-games/ecoscope_workflows_ext_bh_village_games/tasks/: __init__.py  _example.py  _village_games.py
src/ecoscope-workflows-ext-bh-village-games/tests/tasks/: test_example.py
workflows/wt-bh-village-games/: layout.json  param.yaml  spec.yaml  test-cases.yaml
workflows/wt-bh-village-games/ecoscope-workflows-wt-bh-village-games-workflow/: Dockerfile  README.md  pixi.toml
workflows/wt-bh-village-games/ecoscope-workflows-wt-bh-village-games-workflow/ecoscope_workflows_wt_bh_village_games_workflow/: cli.py  formdata.py  params.json  params.py  rjsf.json
workflows/wt-bh-village-games/ecoscope-workflows-wt-bh-village-games-workflow/ecoscope_workflows_wt_bh_village_games_workflow/dags/: jupytext.py  run_async.py  run_async_mock_io.py  run_sequential.py  run_sequential_mock_io.py
workflows/wt-bh-village-games/ecoscope-workflows-wt-bh-village-games-workflow/file:/tmp/workflows/bh-village-games/wt-bh-village-games/output/: village_games_report_2024.docx
workflows/wt-bh-village-games/ecoscope-workflows-wt-bh-village-games-workflow/tests/: conftest.py  test_metadata.py
