[project]
name = "ecoscope-workflows-ext-bh-village-games"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Extension tasks and connections for the template repo."
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
license = { text = "BSD-3-Clause" }
[project.entry-points."ecoscope_workflows"]
tasks = "ecoscope_workflows_ext_bh_village_games.tasks"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = [
    "ecoscope_workflows_ext_bh_village_games",
]
exclude = ["vendor"]
only-packages = true
[tool.hatch.build.targets.sdist]
include = [
    "ecoscope_workflows_ext_bh_village_games",
]
exclude = ["vendor"]
[tool.hatch.build.hooks.vcs]
version-file = "ecoscope_workflows_ext_bh_village_games/_version.py"
[tool.hatch.version]
source = "vcs"
fallback-version = "9999"
[tool.hatch.version.raw-options]
root = "../.."


[tool.pixi.project]
channels = [
    "https://prefix.dev/ecoscope-workflows-custom", # our custom channel, you can add your own
    "https://prefix.dev/ecoscope-workflows",        # the main ecoscope-workflows channel
    "conda-forge",
]

platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
ecoscope-workflows-ext-bh-village-games = { path = ".", editable = true }

[tool.pixi.dependencies]
# restating dependencies from ecoscope-workflows.core to ensure they are included
# todo: ensure exact 1:1 synchronization with ecoscope-workflows.core
# note: if depending on a conda release of ecoscope-workflows, restatement should not be necessary
# perhaps possible to demonstrate this here by making the restatement specific to a 'dev' environment
py-rattler = ">=0.15.0,<0.16"
jinja2 = "*"
pandera = ">0.20.0"
pydantic = "<2.9.0"
pydantic-settings = "*"
#py-rattler = ">=0.15.0,<0.16"
"ruamel.yaml" = "*"
ruff = "*"
tomli-w = "*"
ecoscope-workflows-core = ">=0.19.4"
ecoscope-workflows-ext-ecoscope = ">=0.19.4"
ecoscope-workflows-ext-custom = "0.0.41.*"
ecoscope-workflows-ext-ste = "0.0.18.*"
plotly = "*"
geopandas = "*"
python-docx="*"
playwright="*"
fiona = "*"
matplotlib = ">=3.7"


# additional dependencies added by this extension


[tool.mypy]
plugins = ["pandera.mypy", "pydantic.mypy"]
[tool.pixi.feature.mypy]
dependencies = { mypy = "*", pandas-stubs = "*", pandera-mypy = "*" }
pypi-dependencies = { types-shapely = "*" }
tasks = { mypy = "mypy --package ecoscope_workflows_ext_bh_village_games --package tests --no-incremental" }

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.test.dependencies]
pytest = "*"
matplotlib = "*"
geopandas = "*"
fiona = "*"
shapely = "*"

[tool.pixi.environments]
default = { solve-group = "default" }

mypy-py310 = { features = ["test", "py310", "mypy"], solve-group = "py310" }
mypy-py311 = { features = ["test", "py311", "mypy"], solve-group = "py311" }
mypy-py312 = { features = ["test", "py312", "mypy"], solve-group = "py312" }

test-py310 = { features = ["test", "py310"], solve-group = "py310" }
test-py311 = { features = ["test", "py311"], solve-group = "py311" }
test-py312 = { features = ["test", "py312"], solve-group = "py312" }
